k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orflow-api
  labels:
    app:        orflow-api
    managed-by: kubectl
spec:
  type: ClusterIP

  selector:
    app: orflow-api

  ports:
    - name:       http
      protocol:   TCP
      port:       80          # port the Service listens on inside the cluster
      targetPort: 5000        # port the container listens on (gunicorn)
