k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orflow-api
  labels:
    app: orflow-api
    managed-by: kubectl
  annotations:
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: staging.orflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orflow-api
                port:
                  number: 80

    - host: api.orflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orflow-api
                port:
                  number: 80
